2010-01-19  Jaroslav Hajek  <highegg@gmail.com>, Thorsten Meyer <thorsten.meyier@gmx.de>

	* general/structfun.m: Correctly support multiple arguments with
	non-uniform output. Correct test for non-uniform output.

2010-01-19  Jaroslav Hajek  <highegg@gmail.com>

	* help/print_usage.m: Try determining whether called from top level.
	If not, don't print additional help and enable backtrace instead.

2010-01-18  John W. Eaton  <jwe@octave.org>

	* testfun/test.m: Undo previous change.

2010-01-18  David Grundberg  <davidg@cs.umu.se>

	* testfun/test.m: Append endfunction to function test blocks.

2010-01-17  Thorsten Meyer  <thorsten.meyier@gmx.de>

	* general/celldisp.m: Add example, add demo.

	* general/structfun.m, miscellaneous/getfield.m,
	miscellaneous/orderfields.m, miscellaneous/setfield.m,
	miscellaneous/substruct.m: Update documentation string. 

2010-01-16  David Bateman  <dbateman@free.fr>

	* plot/__go_draw_axes__.m (next_marker):  New function to find a
	new marker. Use it to support the "@" marker.
	* plot/private/__pltopt__.m: Don't convert "@" marker ro "+";

2010-01-15  David Bateman  <dbateman@free.fr>

	plot/__go_draw_figure__.m: Respect the figure and axes color
	properties.

2010-01-14  David Bateman  <dbateman@free.fr>

	* plot/__go_draw_axes__.m:  Fix for markerfacecolor and
	markeredgecolor for unfillable points like '+'.

2010-01-14  Jaroslav Hajek  <highegg@gmail.com>

	* io/fileread.m: Add missing semicolon.

2010-01-14  Jaroslav Hajek  <highegg@gmail.com>

	* strings/strcmpi.m: Remove.
	* strings/strncmpi.m: Remove.
	* strings/module.mk: Update.

2010-01-13  John W. Eaton  <jwe@octave.org>

	* miscellaneous/inputname.m: Use isvarname instead of regexp.

2010-01-13  John W. Eaton  <jwe@octave.org>

	* miscellaneous/inputname.m: Return "" if argument name is not a
	valid identifier.  Update docstring.

2010-01-12  David Bateman  <dbateman@free.fr>

	* plot/__go_draw_axes_.m:  Allow patch markerfacecolor and